# inky-immich-frame

./: .gitignore  README.md  config.example.yaml  pyproject.toml
deploy/: comitup-callback  inky-frame-update  inky-frame-update.service  inky-frame-update.timer  inky-frame.service  provision.md
src/inky_frame/: app.py  config.py  display.py  immich.py  renderer.py  scheduler.py  thumbs.py  web.py  worker.py
tests/: conftest.py  test_config.py  test_display.py  test_immich.py  test_renderer.py  test_scheduler.py  test_thumbs.py  test_web.py  test_worker.py
