[project]
name = "inky-immich-frame"
version = "0.1.0"
description = "E-ink photo frame showing Immich albums on a Pimoroni Inky Impression"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "Pillow>=10.0",
    "Flask>=3.0",
    "APScheduler>=3.10",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
device = ["inky>=2.0"]
dev = ["pytest>=8.0", "respx>=0.21"]

[project.scripts]
inky-frame = "inky_frame.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
